kuber-08/task-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
